# cameroon-made-market

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/src/: config.rs  lib.rs  main.rs  migration.rs  state.rs
backend/src/handlers/: user.rs
backend/src/middleware/: auth.rs  error.rs
backend/src/models/: cart_item.rs  mod.rs  order.rs  order_item.rs  product.rs  user.rs
backend/src/routes/: admin.rs  cart.rs  error.rs  order.rs  payment.rs  product.rs  user.rs
backend/src/services/: errors.rs  image.rs  mod.rs  payment.rs  product.rs  user.rs
backend/src/utils/: mod.rs  password.rs  rbac.rs  shared.rs
frontend/: .env  Dockerfile  README.md  index.html  nginx.conf  npm-shrinkwrap.json  package-lock.json  package.json  pnpm-lock.yaml  proxy_headers.conf  vite.config.ts
frontend/assets/: index-Bejhl5xi.css  index-OXcf_9Tv.js
frontend/public/: manifest.json  offline.html  sw.js
frontend/src/: App.css  App.tsx  i18n.ts  main.tsx  registerSW.ts
frontend/src/components/: AdminNavbar.tsx  Footer.tsx  LanguageSwitcher.tsx  MainNavbar.tsx  Navbar.tsx  ProductCard.tsx  ProductForm.tsx  ProductStatus.tsx  ProtectedRoute.tsx  ServiceWorkerUpdate.tsx  VendorNavbar.tsx
frontend/src/constants/: productData.ts
frontend/src/contexts/: AuthContext.tsx  CartContext.tsx  (+2 more)
migrations/: 20240320000000_create_users_table.sql
public/: manifest.json  sw.js
src/: App.tsx  config.rs  db.rs  lib.rs  main.rs  main.tsx  migration.rs  state.rs
src/components/: AdminNavbar.tsx  Footer.tsx  MainNavbar.tsx  ProductForm.tsx  VendorNavbar.tsx
src/entities/: cart.rs  cart_item.rs  mod.rs  order.rs  order_item.rs  payment.rs  producer.rs  product.rs  user.rs  vendor.rs
src/handlers/: admin_handlers.rs  mod.rs  user.rs
src/hooks/: useProductForm.ts
src/middleware/: admin_auth.rs  auth.rs  error.rs  mod.rs
src/models/: cart.rs  cart_item.rs  mod.rs  order.rs  order_item.rs  payment.rs  product.rs  user.rs
src/pages/: About.tsx  Cart.tsx  Home.tsx  Login.tsx  NotFound.tsx  ProductDetails.tsx  ProductList.tsx
src/routes/: admin.rs  cart.rs  mod.rs  order.rs  orders.rs  payment.rs  product.rs  user.rs
src/services/: cart.rs  errors.rs  image.rs  minio.rs  mod.rs  order.rs  payment.rs  product.rs  user.rs
src/utils/: mod.rs  password.rs  rbac.rs  shared.rs
(+60 files in other folders)
