[package]
name = "cameroon-made-market"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sea-orm = { version = "1.1.9", features = ["runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "with-json", "with-uuid", "macros"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
jsonwebtoken = "9.2"
bcrypt = "0.15"
argon2 = "0.5"
rand = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
futures = "0.3"
rust_decimal = "1.32"
fapshi-rs = "0.1.0"

# Testing
mockall = "0.12"
test-log = "0.2"
anyhow = "1.0.98"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
sea-orm-migration = "1.1.11"

# MinIO
minio = "0.2"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
sea-orm = { version = "1.1.7", features = ["mock"] }
